--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sudokuchan</title>
-    <link rel="stylesheet" href="/src/output.css" />
+    <link rel="stylesheet" href="../src/output.css" />
   </head>
   <body style="background-color: #f7e1a6">
     <!-- Navbar -->
